# F1

./: .gitignore  .pre-commit-config.yaml  README.md  deploy.py  mypy.ini  prefect.yaml  pyproject.toml  requirements.txt
.github/workflows/: .pre-commit.yaml  deploy.yaml
F1/: deploy.py  flows.yaml  prefect.yaml  pyproject.toml
F1/src/f1/flows/racing_circuits/: __init__.py  fetch.py  scrape.py  upload.py
F1/tests/: deployment_test.py
docs/src/: main.tex
src/f1/: utils.py
src/f1/dwh/: base.py  dim_circuit.py  dim_constructor.py  dim_country.py  dim_driver.py  dim_engine_manufacturer.py  dim_race.py  dim_tyre_manufacturer.py  fact_entrant.py  fact_race_data.py
src/f1/flows/: flows_utils.py
src/f1/flows/dwh/: __init__.py  base.py  dim_circuit.py  dim_constructor.py  dim_country.py  dim_driver.py  dim_engine_manufacturer.py  dim_race.py  dim_tyre_manufacturer.py  etl.py  fact_entrant.py  fact_race_data.py  models.py
src/f1/flows/dwh/definitions/: base.py  (+9 more)
src/f1/flows/f1_attendance/: __init__.py  elt.py  fetch.py  models.py  scrape.py  upload.py  utils.py
src/f1/flows/f1db/: __init__.py  elt.py  fetch.py  models.py  scrape.py  upload.py  utils.py
src/f1/flows/racing_circuits/: __init__.py  elt.py  fetch.py  models.py  scrape.py  upload.py  utils.py
src/f1/reports/: raport.pbix
tests/manual/: test1.sql  test10.sql  test11.sql  test2.sql  test3.sql  test4.sql  test5.sql  test6.sql  test7.sql  test8.sql  test9.sql
testy_manualne/: test1.sql  test10.sql  test11.sql  test2.sql  test3.sql  test4.sql  test5.sql  test6.sql  test7.sql  test8.sql  test9.sql
(+26 files in other folders)
