[project]
name = "f1"
version = "0.1.0"
description = ""
authors = [
    {name = "Paweł Pozorski",email = "pozorski.paul@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "prefect[git,sqlalchemy] (>=3.4.1,<4.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)",
    "prefect-github (>=0.3.1,<0.4.0)",
    "beautifulsoup4 (>=4.13.4,<5.0.0)",
    "pandas (>=2.2.3,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
]

[tool.poetry]
packages = [{include = "f1", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
deploy = "deploy:main"
